force-app/main/default/objects/Score__c/fields/Composite_Score__c.field-meta.xml
<CustomField>
    <fullName>Composite_Score__c</fullName>
    <description>50% Business Value, 40% use of platform, 10% creativity</description>
    <formula>0.5 * Business_Value_Score__c +  0.4* Use_of_the_Platform__c + 0.1 * Creativity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>50% Business Value, 40% use of platform, 10% creativity</inlineHelpText>
    <label>Composite Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>