force-app/main/default/objects/Score__c/fields/Creativity__c.field-meta.xml
<CustomField>
    <fullName>Creativity__c</fullName>
    <description>Score 0-5 (5 is the highest)</description>
    <inlineHelpText>Score 0-5 (5 is the highest)</inlineHelpText>
    <label>Creativity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>