force-app/main/default/objects/Score__c/fields/Entry__c.field-meta.xml
<CustomField>
    <fullName>Entry__c</fullName>
    <label>Entry</label>
    <referenceTo>Entry__c</referenceTo>
    <relationshipLabel>Scores</relationshipLabel>
    <relationshipName>Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>