force-app/main/default/objects/Score__c/fields/Judge__c.field-meta.xml
<CustomField>
    <fullName>Judge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judge</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scores</relationshipName>
    <type>Lookup</type>
</CustomField>