force-app/main/default/objects/Score__c/fields/Judge_Notes__c.field-meta.xml
<CustomField>
    <fullName>Judge_Notes__c</fullName>
    <description>App description, Why you scored it the way you did, anything you think useful</description>
    <inlineHelpText>App description, Why you scored it the way you did, anything you think useful. Put your notes here instead of in the chatter field please!</inlineHelpText>
    <label>Judge Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>