force-app/main/default/objects/Score__c/fields/Use_of_the_Platform__c.field-meta.xml
<CustomField>
    <fullName>Use_of_the_Platform__c</fullName>
    <description>Score 0-5 (5 is the highest)</description>
    <inlineHelpText>Score 0-5 (5 is the highest)</inlineHelpText>
    <label>Effective Use of the Salesforce Platform</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>